fix anchor placement for projects, mminor spacing tweaks in the jumbotron

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,26 @@ body{
   font-family: 'Raleway', sans-serif;
 }
 
-img{
+#about-me img{
   max-width: 33%;
+  margin-bottom: 20px;
+}
+
+#about-me p{
+  line-height: .85;
 }
 
 .jumbotron {
   text-align: center;
 }
+
+.jumbotron, .panel-heading {
+    background-color: rgb(201,197,203, 0.9) !important;
+  }
+
+  .panel-body{
+    background-color: rgb(186,172,189, .5) !important;
+  }
 
 .panel {
   min-height: 50%;
